# ChangeLog for sys-libs/glibc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.734 2010/11/09 19:53:52 armin76 Exp $

  09 Nov 2010; Raúl Porcel <armin76@gentoo.org> glibc-2.11.2-r3.ebuild:
  ia64/sh/sparc stable wrt #341755

  03 Nov 2010; Markus Meier <maekke@gentoo.org> glibc-2.11.2-r3.ebuild:
  arm stable, bug #341755

  01 Nov 2010; Jeroen Roovers <jer@gentoo.org> glibc-2.11.2-r3.ebuild:
  Stable for HPPA PPC (bug #341755).

  01 Nov 2010; Mark Loeser <halcy0n@gentoo.org> glibc-2.11.2-r3.ebuild:
  Mark stable for ppc64; bug #341755

  01 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  glibc-2.11.2-r3.ebuild:
  stable x86, security bug 341755

  01 Nov 2010; Tobias Klausmann <klausman@gentoo.org>
  glibc-2.11.2-r3.ebuild:
  Stable on alpha, bug #341755

  31 Oct 2010; Markos Chandras <hwoarang@gentoo.org> glibc-2.11.2-r3.ebuild:
  Stable on amd64 wrt bug #341755

*glibc-2.12.1-r3 (31 Oct 2010)
*glibc-2.11.2-r3 (31 Oct 2010)

  31 Oct 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +glibc-2.11.2-r3.ebuild, +glibc-2.12.1-r3.ebuild:
  Bump glibc version to fully cover the recent security issues.

  30 Oct 2010; Markus Meier <maekke@gentoo.org> glibc-2.11.2-r2.ebuild:
  x86 stable, bug #341755

  29 Oct 2010; Jeroen Roovers <jer@gentoo.org> glibc-2.11.2-r2.ebuild:
  Stable for PPC (bug #341755).

  29 Oct 2010; Mark Loeser <halcy0n@gentoo.org> glibc-2.11.2-r2.ebuild:
  Mark stable for ppc64; bug #341755

  28 Oct 2010; Markos Chandras <hwoarang@gentoo.org> glibc-2.11.2-r2.ebuild:
  Stable on amd64 wrt bug #341755

  28 Oct 2010; Jeroen Roovers <jer@gentoo.org> glibc-2.11.2-r2.ebuild:
  Stable for HPPA (bug #341755).

*glibc-2.12.1-r2 (26 Oct 2010)
*glibc-2.11.2-r2 (26 Oct 2010)

  26 Oct 2010; Mike Frysinger <vapier@gentoo.org> +glibc-2.11.2-r2.ebuild,
  +glibc-2.12.1-r2.ebuild:
  Add fix from upstream for LD_AUDIT + set*id vuln #341755.
