@@ -31,14 +31,9 @@ AUX nscd 1621 RMD160 f6d20c4c3814f70d7741f3fa2e0b53ba32c37960 SHA1 5751fe798024c
 AUX nsswitch.conf 503 RMD160 f375f92f6b41029c93382c39cef896261b140cfc SHA1 42f7f5cc3de75c69bf60d806ac8490106ea63326 SHA256 6c38b8642d5da884327ad678d0351d57be3621562253bd9711394bad87e45e2d
 DIST glibc-2.10.1-patches-6.tar.bz2 113352 RMD160 6874a93e993bb082fc4fd23582b5f6bd1044ec28 SHA1 2448fa11229deeaf7a2135510d35bbdbfe9f31e0 SHA256 36a838d5be4fb96f0471d288f172443df28867c301e7790667e1cb57615e6c04
 DIST glibc-2.10.1.tar.bz2 16106243 RMD160 ca102519ab32714e788a0db5dd43c2f9962c86e9 SHA1 cb478cf9d6e2c905a1a4f4a2cae44a320b8dc50b SHA256 cbad3e637eab613184405a87a2bf08a41991a0e512a3ced60d120effc73de667
-DIST glibc-2.11.2-patches-3.tar.bz2 104300 RMD160 5f8d0f6616e37fce84b76a185000fb5e4fa155de SHA1 b92296a4c3f51a2cd279cd6b7848ea272c71e821 SHA256 9941fa942afcd6e5224fad04192ffbcc47464965c02196a32067e529d53c504b
-DIST glibc-2.11.2-patches-4.tar.bz2 113687 RMD160 bd7de7710ac9d834abd441b461b1ecc07c181010 SHA1 48bd6a30a74445544e04a08b14762fe64c4e1799 SHA256 259558d05233f5490324724f639154bd9882d8aa3cdf78bcea54f42ed0d70c94
-DIST glibc-2.11.2-patches-5.tar.bz2 116096 RMD160 155ffc550d46201951ccecf9e55fdd498ecd18b7 SHA1 89b74613d3a7678f93e55251d248c5dc9337c76c SHA256 7f471eea2506b214c86d2c2d49bccb120fa50ad3901a31f3182c82038fdb219f
 DIST glibc-2.11.2-patches-6.tar.bz2 117116 RMD160 5e2dda6ddd8620af9513aae1033595ebd149c8f9 SHA1 b0f4b73a49d1117649acd74523bb5358e54cbf5e SHA256 490b81357fc43f2d23a050ed39440363b223c1e3f34e77b4596b981680fd9f23
 DIST glibc-2.11.2.tar.bz2 15675392 RMD160 15d14fb6b0b58ec3fb7781efa2f8a558fcb99a7e SHA1 23b477f4816a97e007be1e98abc1ffe2af13ba9e SHA256 c2ac76ee363eed31b2a377489fb2818139f4668b5505ad583009eb9b0e228713
-DIST glibc-2.12.1-patches-4.tar.bz2 89636 RMD160 e746b43d314666be5ed6de9f83a96a618700d60e SHA1 3433058674151dbb714bf0826d77e13603b62e3d SHA256 1977abf5b8a432d0d00a7e35608aeb309ea451f6be1359b7c5d05e046274c74c
-DIST glibc-2.12.1-patches-5.tar.bz2 92009 RMD160 f4ba107afe104a283b692d1046d63bfee7d9f225 SHA1 1bf8b7dd4335f13d801a9fbb9d598fd54d60f66f SHA256 2b34b95da5b76cd7edae2bb1f02df5a105cceab6a8b86288839d0fb23a012209
-DIST glibc-2.12.1-patches-6.tar.bz2 93034 RMD160 61ceea345d40524d6b7c71af46ddc127eaf88b68 SHA1 640be07a15df583a5c493d0ce6f4a76820ab10aa SHA256 4571172d7a627047f6ba526edccde08d2c49be61c7e5713cd7ed3faabbc907a6
+DIST glibc-2.12.1-patches-7.tar.bz2 111836 RMD160 d4658b8f8c1b995d9fa65bdd975ba4e068574f6d SHA1 ae2fa2b26a4813705a0087a6566a6746153bbe38 SHA256 9b4d91f997dc9d8d58a6b79b250661601a1e15e9b1f1eac15fc4f945a1965277
 DIST glibc-2.12.1.tar.bz2 15667516 RMD160 4a46745f4220f4253af0b882d0c2072499e17653 SHA1 ef5ca1e765719d3290bd24f94705f27534f3744b SHA256 759f115c52bc12c5bb453af559dcd456d32138250b7cc96e47804e3d0ec97407
 DIST glibc-2.2.5-manpages.tar.bz2 14667 RMD160 4f6e1fde042c19aca4718c8e06e19dc2786a1334 SHA1 7bb5615af98a8b5fb2ef91a47148fedef227c544 SHA256 03850134bd0c670d8b5fe5e3bad0dac2efdb7078ddf69e0dbcdba380f4d5697c
 DIST glibc-2.2.5-patches-1.0.tar.bz2 21176 RMD160 4575e4355a919b7865829d22ab86cbdcd53253ee SHA1 f8fa215694673c5ee69f00b3986bcd34d48c7d85 SHA256 39e20bbd032db00c3b0781a0055ed092e9ebcbc2f71e4c1930fd93cd67d374fd
@@ -67,17 +62,13 @@ DIST glibc-linuxthreads-2.2.5.tar.bz2 168269 RMD160 4886cb3ccd1a05c48dafb2565b08
 DIST glibc-linuxthreads-2.5.tar.bz2 242445 RMD160 788484d035d53ac39aac18f6e3409a912eea1cfa SHA1 eb7765e5c0a14c7475f1c8b92cbe1f625a8fd76f SHA256 ee27aeba6124a8b351c720eb898917f0f8874d9a384cc2f17aa111a3d679bd2c
 DIST glibc-ports-2.10.1.tar.bz2 584860 RMD160 1f094d4df18306ccb01037d07f0a0e3014fdfc60 SHA1 3cc9eff22d624c5fb6d951bbcb31b40112238fe7 SHA256 b1f1ec9720036a3a33598b8478eef102535444a083d5b5813a6981ed74ab4071
 DIST glibc-ports-2.11.tar.bz2 599606 RMD160 e7262cb903b42d27bd0666fb170d2abb4c8b478f SHA1 76a0513c74b80e34f81abcaabbc538fa0f33b6a4 SHA256 38d212b1a22ed121c97f2827e7357e3e077084635ebc197246993d328b1b6589
+DIST glibc-ports-2.12.1.tar.bz2 621800 RMD160 98b5d5f544336f16bfc8af193e5c447ee6c197ed SHA1 396c1e3958a7563ebdffc8ada8e142e0d6c0b225 SHA256 3986c166d08c30b83c9cc7d972651550b548386d5a02e4e4c985d9832de83110
 DIST glibc-ports-2.5.tar.bz2 409372 RMD160 e7e29df135a5f0f72760d10e5ad46de038e40725 SHA1 7da6257e641759ed29c4d316700fce6f604bc812 SHA256 80c38a005325e7539012bd665fb8e06af9ee9bfc74efb236ebff121265bfd463
 DIST glibc-ports-2.6.1.tar.bz2 431292 RMD160 aa6ba7bc58932c81416c3407a8dd0b5e61f5454a SHA1 f620103c8b02ced80a425c79691573f949bf5d6b SHA256 d094028bc6d6691f56b4efeff7cd7e1c7ca10733e0cb5efc36e8fb08d8324bf1
 DIST glibc-ports-2.7.tar.bz2 435392 RMD160 b9b96b357a394f29d5617aaa26a2c000bcf88874 SHA1 2186eac2248f1dd604f20a9dc8215ce12319d273 SHA256 3e481996259af87c3581da23481970a27de679e3c87cfa9a5a59751cd20c7b44
 EBUILD glibc-2.10.1-r1.ebuild 8161 RMD160 b21cba3d443ff63ebb776c9f15959c1e1e660136 SHA1 e08b8a9ef1f33e85912c5a9e70ce5fd885727bcd SHA256 19b9232a48a904243440581472a71f79bae7cc9674d26d875a6ab0b53ccee75d
-EBUILD glibc-2.11.2-r1.ebuild 8380 RMD160 14035184b6da0f4dde18390e473768a75cacf91b SHA1 b7903d9f368234a4a0cb57580b7ab97c8008eacc SHA256 0812666f36a94f0a51943d0437eb234d1c09be3fc2a0a276aa6d45ceb49e0e3d
-EBUILD glibc-2.11.2-r2.ebuild 8379 RMD160 d328e8725e94245781a4fa62e2a5c0f9f22cdbab SHA1 feb0cedeacccef84333d88a28b9de7caec3f6e7a SHA256 28cd6e65a74c3db8b7491109c805aad729f11e842603e8905741e2f4693b10f5
 EBUILD glibc-2.11.2-r3.ebuild 8375 RMD160 800dbbaf586794c984d02375a7d984b9d4b6f69a SHA1 3b5c162b3aec1ffe113a264f753f2975118e8adc SHA256 fae93ee25e1ca48bbc7876b3cf0f11f2b146b184420798195291ce79ef7f79b2
-EBUILD glibc-2.11.2.ebuild 8370 RMD160 342c97350747f0de699bb533971f58c240db889d SHA1 f56d0df6a07d7782cf1397a6f3d6d27382419eff SHA256 9674646b18ae27e6d03b0ef5612b4f47a298a4fbb71cbe9b2ed8c3f12318a136
-EBUILD glibc-2.12.1-r1.ebuild 8737 RMD160 8c41d7f4cb0160c0b4bf280e500261272213f2fd SHA1 55b22b83677444a9c103e9b02872000efc202a03 SHA256 486475f1b06269f36334475b7839c58b02799de3693fbca996f1204195fa5e73
-EBUILD glibc-2.12.1-r2.ebuild 8737 RMD160 d3ac61f7913a36da3c5c2e1d0b47c0b2543ca51e SHA1 0cf6351b0d16d0f04569bcba193aaa0760fb0747 SHA256 46bf9130b25136a3cd9993483a9fea9cecd9c238856946a53cf4c27d180da57b
-EBUILD glibc-2.12.1-r3.ebuild 8740 RMD160 fa093404bd7f25c315e8969b06025a1e00b18fa0 SHA1 2f20a7a3da90bc82e71560f579e3d2650131d596 SHA256 28ca7cfb525eb2973f84e7d2c86a35e393070d44d016df2ceb1b94e223b87b50
+EBUILD glibc-2.12.1-r3.ebuild 8737 RMD160 6f74da54cd7d84d1c87547c522337c7e260b5c46 SHA1 8e82845ded035a4c8efb5244b8e02fa1c7696478 SHA256 df9f55e55878a328c40ecc71a4b697daf3fd8300452dc3800459447aec3195a6
 EBUILD glibc-2.2.5-r10.ebuild 4847 RMD160 829dc6d11434ff2d8d202277595b0817b1a9ab28 SHA1 19523459701cabf750a777b17cbe0af34d4688dd SHA256 454a2b5d6201ab615f00c50987c7ac0328d22cc66db582851fcd27e2a967b17f
 EBUILD glibc-2.5-r4.ebuild 38684 RMD160 7cc84f40f23c1b78303a7b38d2579b8fde32efc1 SHA1 509f71b1d4c22105d6c30b5759711cb4a407fae8 SHA256 afe1d1ce196d191712767adf21dfb3c92d2bfc7a3c65e0f9c319d65701c2e6de
 EBUILD glibc-2.5.1.ebuild 38760 RMD160 0dad53d7789c5208233e3539eacba99e0841cbfe SHA1 3c03c80ab88d36bfb7a61e7b04c7e8c2f635aa1c SHA256 4ddf5f33c2de73283c4848787efc8acf5a3c6abc5a343aa553653e7480efca37
@@ -86,12 +77,12 @@ EBUILD glibc-2.7-r2.ebuild 12945 RMD160 8099396dc1820a98341f410e31d7d20c77daa928
 EBUILD glibc-2.8_p20080602-r1.ebuild 13488 RMD160 6b58dc46eb346a67557e5ce6b84a10a3688d649a SHA1 a89f61f4add7950715fedd27a4cc9fb68599f4c1 SHA256 f560d233bb3b0bcdda61fe6d052f54c253d43c9b31f7a2070e9b2f4003131b30
 EBUILD glibc-2.9_p20081201-r2.ebuild 7772 RMD160 ad3a0203d514fea907712ada8a9c3970267aa823 SHA1 690094c7a7b7c5a0b016f41ba519d4ecaa8a1cea SHA256 bb909d9117328ca426af80e6b6d78cb3a96b0efe03d511ead4bf8d62341f42a2
 EBUILD glibc-2.9_p20081201-r3.ebuild 7806 RMD160 6d696692a2e122bfdc149aea75368cea00bce92c SHA1 0df0da8ccd0a95084f849bdb92bfc3389efba74f SHA256 995c0e939cc7146e347d3f8caafbf4ad720a7caa7dfd0a9562f5a2877533a45c
-MISC ChangeLog 132073 RMD160 eab7b0170f48857ad6897d0458eeed0f36a5d200 SHA1 0a10423b56d65a2d85510cad77b4f2fba4625298 SHA256 d89c0d916ce475316f3b95ae4db8821ef4bb27d54cf37ee4e050d0685437f831
+MISC ChangeLog 132191 RMD160 40e8827bf66734f3011db8f1b81c04df511021ee SHA1 bf492fad4b5e5dcb77627366152428112b0e54af SHA256 e29d4a668e3d5ab06ec1b5ce03ab9355680c2a1cf2ab2c994593ffa861a4f663
 MISC metadata.xml 539 RMD160 cf4d236b54a77b3cea382d53e4e61721bd14169b SHA1 b54ad589378da193ddc89676f8468c6d1b79521f SHA256 d7cb6dd119c81b5bf12c360af3705ca31a56ffa8bec999b44faa63c183719c31
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkzbE8sACgkQTwhj9JtAlp7nGwD/ZhMo10jGu0onaGbHsQUNp+GR
-xSPiCTAnw0zDMfnyLTMBAJvK0Lz83fdeXcbd75rEpYb2IPq5iamk9ngBC/3YcP5S
-=2gyh
+iF4EAREIAAYFAkzlCZ4ACgkQTwhj9JtAlp5YKwEAxb/5KmiXz/GxodEN0QY6k5Aj
+4gbvPmsEWa0a/AD82roBAKHetS4TuDTHbK9NCxT8ohCunciBwyHsnw1o33D5wCmw
+=M/UD
 -----END PGP SIGNATURE-----
