@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/glibc
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.734 2010/11/09 19:53:52 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.735 2010/11/18 11:11:49 vapier Exp $
+
+  18 Nov 2010; Mike Frysinger <vapier@gentoo.org> glibc-2.12.1-r3.ebuild:
+  Add ports tarball #345811 by Matt Turner.
 
   09 Nov 2010; Raúl Porcel <armin76@gentoo.org> glibc-2.11.2-r3.ebuild:
   ia64/sh/sparc stable wrt #341755
